--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^16.4.7",
     "excel4node": "^1.8.2",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
+    "helmet": "^8.1.0",
     "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
